# shape-captcha-lib

./: .gitignore  LICENSE  LICENSE.txt  README.md  pyproject.toml  test_generator.py
shape_captcha_lib/: __init__.py  challenge_service.py  image_generator.py  logic_core.py  registry.py  settings.py
shape_captcha_lib/locales/ar/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/de/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/en/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/es/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/fr/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/hi/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/it/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/ja/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/pt_BR/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/ru/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/uk/LC_MESSAGES/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/locales/zh_CN/: shape_captcha_lib.mo  shape_captcha_lib.po
shape_captcha_lib/services/: __init__.py  async_service.py  sync_service.py
shape_captcha_lib/shapes/: abc.py
shape_captcha_lib/shapes/base_model/: _palette.py  circle.py  cross.py  equilateral_triangle.py  hexagon.py  pentagon.py  rectangle.py  rhombus.py  square.py  star5.py  trapezoid.py
shape_captcha_lib/shapes/community_plugins/: _palette.py  arrow.py
shape_captcha_lib/shapes/td_model/: _palette.py  cone.py  cross_3d.py  cube.py  cuboid.py  cylinder.py  octahedron.py  pyramid.py  sphere.py  star5_3d.py  torus.py
shape_captcha_lib/stores/: __init__.py  abc_store.py  json_file_store.py  memory_store.py  redis_store.py
shape_captcha_lib/utils/: color_utils.py  geometry_utils.py
tests/: conftest.py  test_challenge_service.py  test_registry.py
